[tool.poetry]
name = "testpg"
version = "0.1.0"
description = ""
authors = ["rahulrajesh23 <itsrahulrajesh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
httpx = "^0.27.0"

pydantic = "^2.7.0"
psycopg = { version = "3.2.1", extras = ["binary"] }

requests = "^2.31.0"
sqlalchemy = { extras = ["asyncio", "postgresql-psycopg"], version = "^2.0.27" }
uvicorn = "^0.29.0"

pydantic-settings = "^2.5.2"
testcontainers = "^4.8.1"
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
pgvector = "^0.3.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
